--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,14 @@
 subprojects {
   apply plugin: 'java'
+  apply plugin: 'application'
 
-  version = "0.0.1-SNAPSHOT"
-
-  jar.manifest {
-    attributes(
-      'Implementation-Title' : name,
-      'Implementation-Version': version,
-      'Built-JDK': "${System.getProperty("java.version")} (${System.getProperty("java.specification.vendor")})",
-      'Built-Gradle': gradle.gradleVersion
-    )
-  }
+  version = "0.0.1"
 
   compileJava.options.encoding = 'UTF-8'
 
   sourceCompatibility = targetCompatibility = 1.8
 
   repositories {
-    mavenCentral()
     jcenter()
   }
 
@@ -28,9 +19,20 @@ subprojects {
 }
 
 project(':morechat-server') {
+  mainClassName = 'org.emamotor.morechat.server.ChatServer'
   dependencies {
     compile 'ninja.siden:siden-core:0.2.0'
   }
 }
 
-project("morechat-client") {}
+project("morechat-client") {
+  mainClassName = 'org.emamotor.morechat.client.ChatClient'
+  dependencies {
+    compile 'javax.websocket:javax.websocket-client-api:1.0'
+    compile 'org.glassfish.tyrus:tyrus-client:1.1'
+    compile 'org.glassfish.tyrus:tyrus-container-grizzly:1.1'
+    compile 'javax.json:javax.json-api:1.0'
+    compile 'org.glassfish:javax.json:1.0.1'
+    compile 'am.ik.voicetext:voicetext4j:0.12.0'
+  }
+}
